@@ -324,6 +324,9 @@ void prepare_child_tasks_for_delete();
 static void mom_lock(int fds, int op);
 #ifdef NUMA_SUPPORT
 int bind_to_nodeboard();
+#ifdef NUMA_MEM_MONITOR
+extern long get_weighted_memory_size(pid_t);
+#endif /* NUMA_MEM_MONITOR */
 #endif /* NUMA_SUPPORT */
 #define PMOMTCPTIMEOUT 60  /* duration in seconds mom TCP requests will block */
 
@@ -5945,8 +5948,13 @@ int job_over_limit(
   int  index;
   unsigned long limit;
   char  *units;
+
 #ifndef NUMA_SUPPORT
   int  i;
+#else
+#ifdef NUMA_MEM_MONITOR
+  char *id = "job_over_limit";
+#endif /* def NUMA_MEM_MONITOR */
 #endif /* ndef NUMA_SUPPORT */
 
   if (mom_over_limit(pjob))
@@ -6084,6 +6092,77 @@ int job_over_limit(
 #endif /* ndef NUMA_SUPPORT */
 
     limit = (index == 0) ? gettime(limresc) : getsize(limresc);
+
+#ifdef NUMA_SUPPORT
+#ifdef NUMA_MEM_MONITOR
+    if (!strcmp(rd->rs_name,"mem"))
+      {
+      FILE *tasks_file;
+      char  file_path[MAXPATHLEN];
+      char  tasks_buf[MAXPATHLEN<<4];
+
+      char *delims = "\n\t\r ,";
+      char *ptr;
+
+      pid_t pid;
+
+      /* query memacctd to discover if this job is over its memory limit */
+      snprintf(file_path,sizeof(file_path),"%s/%s/tasks",
+        TTORQUECPUSET_PATH,
+        pjob->ji_qs.ji_jobid);
+
+      tasks_file = fopen(file_path,"r");
+      total = 0;
+      
+      if (fread(tasks_buf, sizeof(char), sizeof(tasks_buf), tasks_file))
+        {
+        if (ferror(tasks_file) != 0)
+          {
+          log_err(-1,id,
+            "An error occurred while reading cpuset's tasks\n");
+
+          continue;
+          }
+        }
+
+      ptr = strtok(tasks_buf,delims);
+
+      /* parse the tasks file for pids */
+      while (ptr != NULL)
+        {
+        pid = atoi(ptr);
+
+        if (pid != 0)
+          {
+          /* only attempt with good pids */
+          unsigned long tmp = get_weighted_memory_size(pid);
+
+          if (tmp > 0)
+            {
+            /* shift tmp before adding - tmp is in bytes and limit is kb */
+            total += (tmp >> 10);
+
+            /* check now to prevent overflow problems */
+            if (limit <= total)
+              break;
+            }
+          else
+            {
+            snprintf(log_buffer,sizeof(log_buffer),
+              "Couldn't find memory usage for pid %d from job %s",
+              (int)pid,
+              pjob->ji_qs.ji_jobid);
+
+            log_err(errno,id,log_buffer);
+            }
+          }
+
+        ptr = strtok(NULL,delims);
+        } /* end for each pid */
+      } /* END resc == mem */
+
+#endif /* def NUMA_MEM_MONITOR */
+#endif /* def NUMA_SUPPORT */
 
     if (limit <= total)
       break;
